--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
     "url": "https://github.com/github/hubot.git"
   },
   "dependencies": {
-    "hubot": "2.5.5",
-    "hubot-scripts": "2.4.8",
-    "hubot-hipchat": "2.5.1-4",
-    "mongodb": "1.3.11",
-    "moment": "1.6.2",
-    "underscore": "1.5.1",
-    "xml2js": "0.1.14",
-    "ntwitter": "0.5.0",
-    "twit": "1.1.8"
+    "hubot":               "2.5.5",
+    "hubot-scripts":       "2.4.8",
+    "hubot-hipchat":       "2.5.1-4",
+    "mongodb":             "1.3.11",
+    "moment":              "1.6.2",
+    "underscore":          "1.5.1",
+    "xml2js":              "0.1.14",
+    "ntwitter":            "0.5.0",
+    "twit":                "1.1.8",
+    "scoped-http-client":  "0.9.8"
   },
   "engines": {
     "node": ">= 0.8.x",
