--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "hubot-scripts":       "2.4.8",
     "hubot-hipchat":       "2.5.1-4",
     "soupselect":          "0.2.0",
+    "htmlparser":          "*",
     "mongodb":             "1.3.11",
     "moment":              "1.6.2",
     "underscore":          "1.5.1",
