--- a/package.json
+++ b/package.json
@@ -24,19 +24,20 @@
   },
 
   "dependencies": {
-    "hubot":               ">= 2.6.0 < 3.0.0",
-    "hubot-scripts":       ">= 2.5.0 < 3.0.0",
-    "hubot-hipchat":       "2.5.1-5",
-    "soupselect":          "0.2.0",
-    "htmlparser":          "*",
     "bson":                "*",
-    "mongodb":             "1.3.11",
+    "htmlparser":          "*",
+    "hubot":               ">= 2.6.0 < 3.0.0",
+    "hubot-hipchat":       "2.5.1-5",
+    "hubot-plusplus":      "1.0.x",
+    "hubot-scripts":       ">= 2.5.0 < 3.0.0",
     "moment":              "1.6.2",
-    "underscore":          "1.5.1",
-    "xml2js":              "0.1.14",
+    "mongodb":             "1.3.11",
     "ntwitter":            "0.5.0",
+    "scoped-http-client":  "0.9.8",
+    "soupselect":          "0.2.0",
     "twit":                "1.1.8",
-    "scoped-http-client":  "0.9.8"
+    "underscore":          "1.5.1",
+    "xml2js":              "0.1.14"
   },
 
   "engines": {
