--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "hubot-hipchat":       "https://github.com/liftopia/hubot-hipchat/archive/fix-roster-updates.tar.gz",
     "hubot-plusplus":      "1.0.x",
     "hubot-scripts":       ">= 2.5.0 < 3.0.0",
+    "jenkins":             "*",
     "moment":              "1.6.2",
     "mongodb":             "1.3.11",
     "ntwitter":            "0.5.0",
