--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "soupselect":          "0.2.0",
     "twit":                "1.1.8",
     "underscore":          "1.5.1",
-    "xml2js":              "0.1.14"
+    "xml2js":              "0.1.14",
+    "hubot-calculator":    "0.2.0"
   },
 
   "engines": {
