--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "github":              "0.1.16",
     "htmlparser":          "*",
     "hubot":               ">= 2.6.0 < 3.0.0",
-    "hubot-calculator":    "0.3.0",
+    "hubot-calculator":    "0.2.0",
     "hubot-hipchat":       "https://github.com/liftopia/hubot-hipchat/archive/fix-roster-updates.tar.gz",
-    "hubot-loudbot":       "https://github.com/liftopia/hubot-loudbot/archive/fix-matches-null-length.tar.gz",
+    "hubot-loudbot":       ">= 1.0.0",
     "hubot-plusplus":      "1.0.x",
-    "hubot-scripts":       "2.5.7",
+    "hubot-scripts":       ">= 2.5.0 < 3.0.0",
     "jenkins":             "*",
     "moment":              "1.6.2",
     "mongodb":             "1.3.11",
