--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "htmlparser":             "*",
     "hubot":                  ">= 2.6.0 < 3.0.0",
     "hubot-calculator":       "0.3.0",
-    "hubot-heroku-keepalive": "0.0.4"
+    "hubot-heroku-keepalive": "0.0.4",
     "hubot-hipchat":          "https://github.com/liftopia/hubot-hipchat/archive/fix-roster-updates.tar.gz",
     "hubot-plusplus":         "1.0.x",
     "hubot-scripts":          ">= 2.5.0 < 3.0.0",
