Update hipchat adapter to the latest npm version

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "hubot":                  "2.11.1",
     "hubot-calculator":       "0.3.0",
     "hubot-heroku-keepalive": "0.0.4",
-    "hubot-hipchat":          "https://github.com/liftopia/hubot-hipchat/archive/fix-roster-updates.tar.gz",
+    "hubot-hipchat":          "~2.12",
     "hubot-plusplus":         "1.0.x",
     "hubot-scripts":          ">= 2.5.0 < 3.0.0",
     "jenkins":                "*",
