--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "hubot":                  "2.11.1",
     "hubot-calculator":       "0.3.0",
     "hubot-heroku-keepalive": "0.0.4",
-    "hubot-hipchat":          "~2.12",
     "hubot-plusplus":         "1.0.x",
     "hubot-scripts":          ">= 2.5.0 < 3.0.0",
+    "hubot-slack": "git+https://github.com/slackhq/hubot-slack.git#af37d933671423e5c00966395c9852ee7123bab7",
     "jenkins":                "*",
     "moment":                 "1.6.2",
     "mongodb":                "1.3.11",
